--- a/Notebooks/ETL.ipynb
+++ b/Notebooks/ETL.ipynb
@@ -21,9 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nazareno\\AppData\\Local\\Temp\\ipykernel_17700\\2162656668.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
@@ -40,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +307,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +782,7 @@
        "4 -34.622466    moto  pasajeros      moto  pasajeros    fatal  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +958,7 @@
        "4  2016-02-01 00:00:00  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,12 +1107,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Cambio de etiqueta\n",
-    "homicidios_victimas['rol'].replace('pasajero_acompañante', 'pasajero', inplace=True)"
+    "homicidios_victimas.replace({'rol': {'pasajero_acompañante': 'pasajero'}}, inplace=True)\n"
    ]
   },
   {
@@ -1109,11 +1124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "homicidios_victimas['rol'].replace('peaton', 'peatón', inplace=True)"
+    "homicidios_victimas.replace({'rol': {'peaton': 'peatón'}}, inplace=True)\n"
    ]
   },
   {
@@ -1125,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1273,7 @@
        "4          29.0    fatal  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1489,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1602,11 +1617,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lesiones_hechos['gravedad'].fillna('leve', inplace=True)"
+    "lesiones_hechos.fillna({'gravedad': 'leve'}, inplace=True)\n"
    ]
   },
   {
@@ -1618,11 +1633,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lesiones_hechos['comuna'].replace('No Especificada',np.nan,inplace=True)"
+    "lesiones_hechos.replace({'comuna': {'No Especificada': np.nan}}, inplace=True)\n"
    ]
   },
   {
@@ -1635,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1655,7 +1670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1673,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1731,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1922,7 @@
        "4 -34.604579       auto     NaN     leve      auto       NaN  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1925,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2041,7 +2056,7 @@
        "4          45.0      NaN  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2110,11 +2125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lesiones_victimas['GRAVEDAD'].fillna('leve', inplace=True)"
+    "lesiones_victimas.fillna({'GRAVEDAD': 'leve'}, inplace=True)\n"
    ]
   },
   {
@@ -2128,7 +2143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2167,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2183,11 +2198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lesiones_victimas['sexo_victima'].replace({'varon': 'masculino', 'mujer': 'femenino','mujer ': 'femenino'}, inplace=True)"
+    "lesiones_victimas.replace({'sexo_victima': {'varon': 'masculino', 'mujer': 'femenino', 'mujer ': 'femenino'}}, inplace=True)\n"
    ]
   },
   {
@@ -2199,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2219,7 +2234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2228,7 +2243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2326,7 +2341,7 @@
        "4     leve  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2380,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2396,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2427,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2450,7 +2465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2478,7 +2493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
